--- a/Project.toml
+++ b/Project.toml
@@ -3,6 +3,10 @@ uuid = "ab438be7-21a5-4552-bdb4-455e723b1972"
 authors = ["Natapon Wanapinit"]
 version = "1.0.0"
 
+[deps]
+MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+UMAP = "c4f8c510-2410-5be4-91d7-4fbaeb39457e"
+
 [compat]
 julia = "1"
 
