--- a/Project.toml
+++ b/Project.toml
@@ -4,8 +4,12 @@ authors = ["Natapon Wanapinit"]
 version = "1.0.0"
 
 [deps]
+CSV = "336ed68f-0bac-5ca0-87d4-7b16caf5d00b"
 Clustering = "aaaa29a8-35af-508c-8bc3-b662a17a0fe5"
+DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+ESAFunctions = "f2ae3dbe-0e69-47a0-a214-cb9e16550311"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
+PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 UMAP = "c4f8c510-2410-5be4-91d7-4fbaeb39457e"
 
