--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ ESAFunctions = "f2ae3dbe-0e69-47a0-a214-cb9e16550311"
 MultivariateStats = "6f286f6a-111f-5878-ab1e-185364afe411"
 PlotlyJS = "f0f68f2c-4968-5e81-91da-67840de0976a"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 UMAP = "c4f8c510-2410-5be4-91d7-4fbaeb39457e"
 
 [compat]
